tdf#163816 Keep ratio of OLE object (chart...)

When an OLE object (for instance a chart in Calc) is edited,
resizing should behave like in non-edited mode:
handles in corner resize proportionaly (Widht/Height ratio is preserved)
whereas handles on edges modify Width/Height ratio
Press Shift key to toggle behavior
When draging object with border,
press shift key to move object only horizontal/vertical/45°

Change-Id: I66df55d3170a094bbd63eff9f6b93915cc57e060
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177588
Tested-by: Jenkins
Reviewed-by: Laurent Balland <laurent.balland@mailo.fr>